# myelin

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  e2e.yml
benches/: envelope_json.rs
schema/: events.sql
scripts/: e2e_local.sh
src/: config.rs  error.rs  lib.rs  main.rs  prom.rs
src/pg/: admin.rs  decode.rs  mod.rs  pgoutput.rs  publish.rs  stream.rs
